--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,12 +16,12 @@
         <!-- Contenido -->
         <section>  
 			<b>Libros</b>
-            <p>(Contenido)</p>
+            <p>Team Topologies</p>
 		</section> 
 
         <section>  
 			<b>Películas</b>
-            <p>(Contenido)</p>
+            <p>La llamada salvaje</p>
         </section>     
 
 
